--- a/package.json
+++ b/package.json
@@ -2,19 +2,38 @@
     "name": "saf",
     "version": "1.0.0",
     "description": "Slack<->Salesforce Action Framework",
-    "main": "index.js",
+    "main": "node src/index.js",
     "scripts": {
         "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "lint": "eslint ./src/**/*.js",
+        "prettier": "prettier --write \"**/*.{css,html,js,json,md,ts,yaml,yml}\"",
+        "prettier:verify": "prettier --list-different \"**/*.{css,html,js,json,md,ts,yaml,yml}\"",
+        "postinstall": "husky install",
+        "precommit": "lint-staged"
     },
     "author": "Kevin Poorman",
     "dependencies": {
         "@slack/bolt": "^3.3.0",
-        "jsforce": "^1.10.1"
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "jsforce": "^1.10.1",
+        "pg": "^8.5.1",
+        "salesforce-jwt-bearer-token-flow": "^0.2.4"
     },
     "devDependencies": {
+        "eslint": "^7.23.0",
         "heroku": "^7.51.0",
+        "husky": "^6.0.0",
+        "lint-staged": "^10.5.4",
         "prettier": "^2.2.1"
+    },
+    "lint-staged": {
+        "**/*.{css,html,js,json,md,ts,yaml,yml}": [
+            "prettier --write"
+        ],
+        "./src/**/*.js": [
+            "eslint"
+        ]
     },
     "license": "ISC"
 }
