--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "node src/index.js",
     "scripts": {
         "start": "node src/index.js",
+        "start2": "node src/index2.js",
         "lint": "eslint ./src/**/*.js",
         "prettier": "prettier --write \"**/*.{css,html,js,json,md,ts,yaml,yml}\"",
         "prettier:verify": "prettier --list-different \"**/*.{css,html,js,json,md,ts,yaml,yml}\"",
@@ -18,7 +19,8 @@
         "express": "^4.17.1",
         "jsforce": "^1.10.1",
         "pg": "^8.5.1",
-        "salesforce-jwt-bearer-token-flow": "^0.2.4"
+        "salesforce-jwt-bearer-token-flow": "^0.2.4",
+        "sf-jwt-token": "^1.3.0"
     },
     "devDependencies": {
         "eslint": "^7.23.0",
